--- a/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
@@ -186,6 +186,57 @@
     }
 }
 
+@media screen and (max-width: 1400px) {
+    .supportUsPageWrapper {
+        padding: 110px 10% 0;
+
+        .mainBlock {
+            .donatesPurposeBlock {
+                width: calc(80vw - 340px);
+    
+                .heading {
+                    @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 28px);
+                    line-height: 32px;
+                }
+
+                ul.purposeList {
+                    @include mut.rem-margined($top: 12px, $bottom: 16px);
+                    gap: 12px;
+
+                    li {
+                        @include mut.rem-margined($bottom: 8px);
+                        gap: 9px;
+
+                        svg {
+                            transform: scale(0.7);
+                        }
+
+                        span {
+                            font-size: 14px;
+                            line-height: 16.41px;
+                        }
+                    }
+                }           
+
+                .purposeBottomText {
+                    font-size: 16px;
+                    line-height: 19px;
+                }
+            }
+
+            .donateWindow {
+                @include mut.sized($width: 340px, $height: 343px);
+            }
+        }
+
+        .donateSubBlocks {
+            @include mut.sized($height: 351px, $width: 1080px);
+            margin: 40px calc((80vw - 1080px) / 2) 0;
+            gap: 40px;
+        }
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .supportUsPageWrapper {
         padding: 84px 9px 0;
@@ -220,18 +271,6 @@
                     line-height: 26px;
                 }
 
-                ul.purposeList {
-                    @include mut.rem-margined($top: 12px, $bottom: 16px);
-                    gap: 12px;
-
-                    li {
-                        span {
-                            font-size: 14px;
-                            line-height: 16.41px;
-                        }
-                    }
-                }
-
                 .purposeBottomText {
                     font-size: 14px;
                     line-height: 16.41px;
@@ -245,7 +284,7 @@
 
         .donateSubBlocks {
             @include mut.sized($height: 257px, $width: 748px);
-            margin: 40px calc((100vw - 784px) / 2) 0;
+            margin: 40px calc((100vw - 784px) / 2 + 9px) 0;
 
             gap: 12px;
             
