--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -4,33 +4,28 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
 
-
-.donatesModalContent {
+.donatesBlockContent {
   @include mut.flex-centered($direction: column);
   @include mut.sized(590px, 525px);
-  display: flex;
-
 
   > h1 {
-    color: c.$pure-black-color;
-    width: f.pxToRem(550px);
-    height: f.pxToRem(48px);
-    text-align: center;
+    @include mut.sized(550px, 48px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 36px, $font-weight: 500);
+    text-align: center;
+    color: c.$pure-black-color;
   }
 
   .enterSum{
     @include mut.rem-margined($top: 32px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 10px, $font-weight: 500);
     line-height: f.pxToRem(18px);
-    color: #A3A3A3;
+    color: c.$darkish-gray-color;
   }
 
-  > .donateInputContainerWrapper{
-    display: flex;
-    justify-content: center;
-    
+  > .donateInputContainerWrapper {
+    @include mut.flexed($justify-content: center); 
   }
+
   .amountInput {
     @include mut.rem-margined($bottom: 35px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 40px, $font-weight: 500);
@@ -39,7 +34,8 @@
     color: c.$darkish-gray-color;
     border: none;
     padding: 0;
-    overflow: visible !important;
+    overflow: visible;
+
     &:not(.active) {     
       text-decoration: underline;
     }
@@ -55,7 +51,7 @@
   }
 
   .GryvnaSymbol{
-    width: fit-content !important;
+    width: fit-content;
   }
 
   .donatesBtnContainer {
@@ -90,10 +86,8 @@
     }
   }
   
-  
-
   .donatesInputContainer {
-    @include mut.sized(550px, 24px);
+    @include mut.sized(550px);
     @include mut.flexed($justify-content: space-between, $gap: 25px);
     margin: f.pxToRem(32px);
     
@@ -101,30 +95,21 @@
       border: none;
       display: flex;
       align-items: center;
-      overflow: visible !important;
+      overflow: visible;
+      border-radius: 0px !important;
+
+
       .ant-checkbox-input {
-        width: 23px;
-        height: 23px;
+        @include mut.sized(23px, 23px);
       }
       
-      span{
+      span {
         display: inline-block;
-        vertical-align: middle;
         overflow: visible;
-             
-        .ant-checkbox-inner {
-          width: 24px !important;
-          height: 24px !important;
-        }
   
         &:last-child {
-          @include mut.with-font(ft.$roboto-font , $font-size: 15px, $font-weight: 300);
-          font-style: normal;
-          line-height: f.pxToRem(18px);
-          padding-inline-start: f.pxToRem(16px);
-          height: f.pxToRem(24px);
-          padding-top: 1vh;
-          
+          @include mut.with-font(ft.$roboto-font, $font-size: 15px, $font-weight: 300);
+          @include mut.rem-padded($top: 6px, $left: 16px);
         }
       }
     }
@@ -139,17 +124,19 @@
   .donatesDonateBtn {
     @include mut.sized(550px, 73px);
     @include mut.full-rounded(11px);
+
     background-color: c.$accented-red-color;
     box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
-    border-radius: 15px !important;
+    border-radius: 15px;
 
-    &:disabled{
-      background-color: c.$lighter-gray-color;
-        color: c.$pure-white-color;
+    &:disabled {
       cursor: pointer;
+      background-color: c.$lighter-gray-color;
+      color: c.$pure-white-color;
     }
+
     > span {
-      @include mut.with-font($font-size: 20px, /*$font-weight: 500*/);
+      @include mut.with-font($font-size: 20px);
       color: c.$pure-white-color;
     }
 
@@ -160,114 +147,91 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .donatesModal {
-    @include mut.sizedImportant(340px, 343px);
-    display: flex;
-    justify-content: center;
+  .donatesBlockContent {
+    @include mut.sized(340px, 343px);
 
-    &.ant-modal {
-      .ant-modal-content {
-        @include mut.full-rounded(16px, $overflow: visible);
+    > h1 {
+      @include mut.with-font(ft.$closer-text-font, $font-size: 20px, $font-weight: 500);
+      line-height: 26px;
+      text-align: center;
+      letter-spacing: 0.005em;
+    }
 
-        .ant-modal-body{
-          width: 100%;
-          padding: f.pxToRem(16px);
-        }
-      }
+    > h3 {
+      @include mut.with-font($font-size: 14px, $font-weight: 300);
+      @include mut.rem-margined($top: 10px, $bottom: 10px);
+    }
 
-      .ant-modal-close{
-        display: none;
+    .enterSum {
+      @include mut.rem-margined($top: 0);
+      @include mut.with-font(ft.$closer-text-font, $font-size: 10px, $font-weight: 500);
+      line-height: 15px;
+    }
+
+    .amountInput {
+      @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
+      @include mut.rem-margined($top: 0px, $bottom: 16px);
+
+      display: flex;
+      align-items: center;
+      height: 42px;
+      max-width: 100%;
+
+      &:not(.active) {     
+        text-decoration-line: underline;  
+        text-decoration-thickness: 2px;
+        text-underline-offset: 2px;
       }
     }
 
-    .donatesModalContent {
-      @include mut.sizedImportant(340px, 343px);
-      width: f.pxToRem(340px) !important;
-      height: f.pxToRem(343px) !important;
+    .GryvnaSymbol {
+      @include mut.rem-padded($top: 1px);
+    }
 
-      > h1{
-        @include mut.with-font(ft.$closer-text-font, $font-size: 20px, $font-weight: 500);
-        line-height: 26px;
-        text-align: center;
-        letter-spacing: 0.005em;
-      }
+    .donatesBtnContainer {
+      @include mut.sized(308px, 100%);
+      gap: 0;
 
-      > h3{
-        @include mut.with-font($font-size: 14px, $font-weight: 300);
-        @include mut.rem-margined($top: 10px, $bottom: 10px);
-      }
+      > * {
+        @include mut.sizedImportant($width: 100px, $height: 37px);
+        border-radius: 11px;
+        border: 2px solid c.$dark-red-color;
 
-      .enterSum{
-        @include mut.rem-margined($top: 0);
-        @include mut.with-font(ft.$closer-text-font, $font-size: 10px, $font-weight: 500);
-        line-height: 15px;
-      }
-
-      .amountInput{
-        @include mut.with-font(ft.$closer-text-font, $font-size: 32px, $font-weight: 500);
-        @include mut.rem-margined($top: 0px, $bottom: 16px);
-
-        display: flex;
-        align-items: center;
-        height: 42px;
-        max-width: 100%;
-
-        &:not(.active) {     
-          text-decoration-line: underline;  
-          text-decoration-thickness: 2px;
-          text-underline-offset: 2px;
+        > span {
+          @include mut.with-font(ft.$closer-text-font, $font-size: 16px, $font-weight: 350);
         }
       }
-      .GryvnaSymbol{
-        padding-top: 1px !important;
+    }
+
+    .donatesDonateBtn {
+      @include mut.sized(100%, 46px);
+
+      > span {
+        @include mut.with-font(ft.$roboto-font, $font-size: 14px, $font-weight: 500);
+        line-height: 16px;
+        color: c.$pure-white-color;
+        text-transform: none;
+        border-radius: 10px;
       }
-      .donatesBtnContainer{
-        @include mut.sized(308px, 100%);
-        
-        gap: 0;
-        > * {
-          width: f.pxToRem(100px) !important;
-          height: f.pxToRem(37px) !important;
-          border-radius: 11px !important;
-          border: 2px solid c.$dark-red-color;
+    }
 
-          > span{
-            @include mut.with-font(ft.$closer-text-font, $font-size: 16px, $font-weight: 350);
-          }
-        }
-      }
-
-      .donatesDonateBtn {
-        @include mut.sized(100%, 46px);
-
-        > span{
-          @include mut.with-font(ft.$roboto-font, $font-size: 14px, $font-weight: 500);
-          line-height: 16px;
-          color: #FFFFFF;
-          text-transform: none;
-          border-radius: 10px !important;
-        }
-      }
-
-      .donatesInputContainer{
-        @include mut.sized(100%, 28px);
-        margin: 16px;
-        
-        >.checkbox-borderline {
-          display: flex;
-          overflow: visible !important;
-
-          > span{
-            display: inline-block;
-            vertical-align: middle;
+    .donatesInputContainer {
+      @include mut.sized(100%, 28px);
+      margin: 16px;
       
-            &:last-child {
-              @include mut.with-font(ft.$roboto-font , $font-size: 12px, $font-weight: 500);
-              height: f.pxToRem(28px);
-              padding-top: f.pxToRem(2px);
-              font-style: normal;
-              line-height: f.pxToRem(14px);
-            }
+      >.checkbox-borderline {
+        display: flex;
+        overflow: visible;
+
+        > span {
+          display: inline-block;
+          vertical-align: middle;
+    
+          &:last-child {
+            @include mut.sized($height: 28px);
+            @include mut.rem-padded($top: 2px);
+            @include mut.with-font(ft.$roboto-font, $font-size: 12px, $font-weight: 500);
+            line-height: f.pxToRem(14px);
           }
         }
       }
@@ -276,12 +240,12 @@
 }
 
 @media screen and (max-width: 480px) {
-  .donatesModal .donatesModalContent .donatesBtnContainer {
+  .donatesBlockContent .donatesBtnContainer {
     @include mut.sized(308px, 100%);
     @include mut.flexed($direction: row-reverse, $justify-content: space-between, $gap: 4px);
 
     > * {
-      width: f.pxToRem(100px) !important;
+      width: f.pxToRem(100px);
     }
   }
 }
