--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -40,3 +40,4 @@ $card-scrollbar-track-color: #DEDCDC !important;
 $modal-hover-color: #ECE9E9 !important;
 $burger-menu-color: #7F7F7F !important;
 $input-outline-color: #E6E4E4 !important;
+$light-border-color: #DCDCDC !important;
