donates window is almost adaptive

--- a/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/SupportUs.styles.scss
@@ -226,6 +226,7 @@
 
             .donateWindow {
                 @include mut.sized($width: 340px, $height: 343px);
+                border-radius: 16px;
             }
         }
 
