--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -14,6 +14,7 @@ $darker-gray-color: #5D5D5D !important;
 $dark-gray-color: #4D4D4D !important;
 $darkish-gray-color: #A3A3A3 !important;
 $transparent-redish-gray-color: #db34242e !important;
+$checkbox-light-grey: #6d6d6d !important;
 
 $normal-gray-color: #7F7F7F !important;
 $normal-darker-gray-color: #7E7E7E !important;
