--- a/src/features/AdminPage/NewStreetcode/HistoryRelations/components/components.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/HistoryRelations/components/components.styles.scss
@@ -7,15 +7,11 @@ $list-width: 40%;
 
 .list-container {
     @include mut.sized($list-width);
-    max-height: 160px; 
-    margin: 10px;
-    overflow-y: auto;
 
     #list {
         list-style: none;
         margin: 0;
         padding: 0;
-
         li {
             padding: 10px;
             border: 1px solid #ccc;
@@ -25,10 +21,8 @@ $list-width: 40%;
 }  
 .input-container {
     display: flex;
-    align-items: center;
-    vertical-align: center;
   
-    .relation-title-input {
+    relation-title-input {
       @include mut.sized($list-width);
       margin-left: 10px;
       padding: 5px;
@@ -36,24 +30,6 @@ $list-width: 40%;
     }
   }
   
-  .create-relation-button {  
-    padding: 10px;
-    margin-left: 10px;
-    border: none;
-    border-radius: 12px;
-    font-weight: 500px;
-    color: white;
-    background-color: c.$accented-red-color;
-    display: flex;
-    align-items: center;
-    line-height: 1;
-  
-    &:hover {
-      background-color: c.$dark-red-color;
-    }
-  }
-  
-
 .relationItem {
     display: flex;
     position: relative;
