--- a/src/index.scss
+++ b/src/index.scss
@@ -68,6 +68,14 @@ ul, ol {
     background-color: c.$dark-red-color;
     border-color: c.$dark-red-color;
   }
+  
+  &[disabled]{
+    pointer-events: none;
+  }
+  &:disabled{
+    background-color: c.$lighter-gray-color;
+    border-color: c.$lighter-gray-color;
+  }
 }
 ::-webkit-scrollbar {
   width: f.pxToRem(15px);
