--- a/src/features/AdminPage/NewStreetcode/MainNewStreetcode.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/MainNewStreetcode.styles.scss
@@ -17,7 +17,7 @@ $articlesImg: "@assets/images/sources/Articles.png";
         margin: 0px auto;
         
         &-block{
-            border: 2px solid red;
+            //border: 2px solid red;
             margin-bottom: 14px;
             width: 100%;
             display: flex;
