--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -43,7 +43,7 @@
 
 .checkbox-text{
   @include mut.with-font(ft.$roboto-font, 500, 20px, normal);
-  @include mut.positioned-as(relative, $bottom: 2px);
+  @include mut.positioned-as(relative, $top: 4px);
   color: c.$normal-darker-gray-color;
 }
 .ant-checkbox{
