--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -111,30 +111,31 @@
         }
       }
     }
-      .ant-checkbox{
+
+      .ant-checkbox {
           @include mut.sized(25px, 25px);
-    
       }
 
-      .ant-checkbox-inner{
-        width: 25px !important;
-        height: 25px !important;
-        border: 3px solid #7E7E7E !important;
+      .ant-checkbox-inner {
+        @include mut.sized(25px, 25px);
+
+        border: 3px solid c.$normal-darker-gray-color;
         border-radius: 0  !important;
+        overflow: visible;
       }
-      .ant-checkbox-checked{
+      .ant-checkbox-checked {
         .ant-checkbox-inner{
-          border: 3px solid #DB3424 !important;
+          border: 3px solid c.$accented-red-color;
         }
       }
 
-      .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner::after{
+      .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner::after {
         opacity: 0;
       }
-      .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner{
+
+      .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner {
         background: red !important;
-        box-shadow: inset 0 0 0 2px white !important;
-        
+        box-shadow: inset 0 0 0 2px white !important; 
       }
   }
 
