--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -117,14 +117,16 @@
       }
 
       .ant-checkbox-inner {
-        @include mut.sized(25px, 25px);
+        @include mut.sizedImportant(25px, 25px);
 
         border: 3px solid c.$normal-darker-gray-color;
         border-radius: 0  !important;
         overflow: visible;
       }
+
       .ant-checkbox-checked {
-        .ant-checkbox-inner{
+
+        .ant-checkbox-inner {
           border: 3px solid c.$accented-red-color;
         }
       }
@@ -134,8 +136,8 @@
       }
 
       .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner {
-        background: red !important;
-        box-shadow: inset 0 0 0 2px white !important; 
+        background: c.$accented-red-color;
+        box-shadow: inset 0 0 0 2px c.$pure-white-color;
       }
   }
 
